fix:back: 유저 정보 조회 시 playlistID만 불러오는 부분 수정